crates/parser/src/snapshots/parser__tests__parse_inline_ok@0145_wildcard_expr.ath.snap
---
source: crates/parser/src/tests.rs
description: "_\n"
input_file: crates/parser/test_data/parser/inline/ok/expr/0145_wildcard_expr.ath
---
WILDCARD_EXPR
  UNDERSCORE "_"
  WHITESPACE "\n"

