crates/parser/src/snapshots/parser__tests__parse_inline_ok@0147_declare_constant_compound_sort.ath.snap
---
source: crates/parser/src/tests.rs
description: "declare foo : (List A)\n"
input_file: crates/parser/test_data/parser/inline/ok/dir/0147_declare_constant_compound_sort.ath
---
CONSTANT_DECLARE_DIR
  DECLARE_KW "declare"
  WHITESPACE " "
  IDENTIFIER
    IDENT "foo"
  WHITESPACE " "
  COLON ":"
  WHITESPACE " "
  COMPOUND_SORT_DECL
    L_PAREN "("
    IDENT_SORT
      IDENTIFIER
        IDENT "List"
    WHITESPACE " "
    IDENT_SORT
      IDENTIFIER
        IDENT "A"
    R_PAREN ")"
  WHITESPACE "\n"

