crates/parser/src/snapshots/parser__tests__parse_inline_ok@0149_define_prefix.ath.snap
---
source: crates/parser/src/tests.rs
description: "(define A B)\n"
input_file: crates/parser/test_data/parser/inline/ok/dir/0149_define_prefix.ath
---
PREFIX_DEFINE
  L_PAREN "("
  DEFINE_KW "define"
  WHITESPACE " "
  IDENTIFIER
    IDENT "A"
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      IDENTIFIER
        IDENT "B"
  R_PAREN ")"
  WHITESPACE "\n"

