crates/parser/src/snapshots/parser__tests__parse_inline_ok@0150_define_named.ath.snap
---
source: crates/parser/src/tests.rs
description: "define (foo as [a]) := true\n"
input_file: crates/parser/test_data/parser/inline/ok/dir/0150_define_named.ath
---
INFIX_DEFINE_DIR
  DEFINE_KW "define"
  WHITESPACE " "
  DEFINE_NAMED_PATTERN
    L_PAREN "("
    IDENTIFIER
      IDENT "foo"
    WHITESPACE " "
    AS_KW "as"
    WHITESPACE " "
    LIST_PAT
      L_BRACK "["
      IDENT_PAT
        IDENTIFIER
          IDENT "a"
      R_BRACK "]"
    R_PAREN ")"
  WHITESPACE " "
  COLON_EQ ":="
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      IDENTIFIER
        IDENT "true"
  WHITESPACE "\n"

