crates/parser/src/snapshots/parser__tests__parse_inline_ok@0152_prefix_rule_dir.ath.snap
---
source: crates/parser/src/tests.rs
description: "(primitive-method (false-intro)\n (not (false)))\n"
input_file: crates/parser/test_data/parser/inline/ok/dir/0152_prefix_rule_dir.ath
---
PREFIX_RULE_DIR
  L_PAREN "("
  PRIMITIVE_METHOD_KW "primitive-method"
  WHITESPACE " "
  L_PAREN "("
  NAME
    IDENT "false-intro"
  R_PAREN ")"
  WHITESPACE "\n "
  APPLICATION_EXPR
    L_PAREN "("
    EXPR_PHRASE
      IDENT_EXPR
        NAME_REF
          IDENT "not"
    WHITESPACE " "
    EXPR_PHRASE
      APPLICATION_EXPR
        L_PAREN "("
        EXPR_PHRASE
          IDENT_EXPR
            NAME_REF
              IDENT "false"
        R_PAREN ")"
    R_PAREN ")"
  R_PAREN ")"
  WHITESPACE "\n"

