crates/parser/src/snapshots/parser__tests__parse_inline_ok@0153_infix_rule_dir.ath.snap
---
source: crates/parser/src/tests.rs
description: "primitive-method (false-intro) := (not (false))\n"
input_file: crates/parser/test_data/parser/inline/ok/dir/0153_infix_rule_dir.ath
---
INFIX_RULE_DIR
  PRIMITIVE_METHOD_KW "primitive-method"
  WHITESPACE " "
  L_PAREN "("
  NAME
    IDENT "false-intro"
  R_PAREN ")"
  WHITESPACE " "
  COLON_EQ ":="
  WHITESPACE " "
  APPLICATION_EXPR
    L_PAREN "("
    EXPR_PHRASE
      IDENT_EXPR
        NAME_REF
          IDENT "not"
    WHITESPACE " "
    EXPR_PHRASE
      APPLICATION_EXPR
        L_PAREN "("
        EXPR_PHRASE
          IDENT_EXPR
            NAME_REF
              IDENT "false"
        R_PAREN ")"
    R_PAREN ")"
  WHITESPACE "\n"

