crates/parser/src/snapshots/parser__tests__parse_inline_ok@0154_prefix_match.ath.snap
---
source: crates/parser/src/tests.rs
description: "(match foo (A B) (C D))\n"
input_file: crates/parser/test_data/parser/inline/ok/expr/0154_prefix_match.ath
---
PREFIX_MATCH_EXPR
  L_PAREN "("
  MATCH_KW "match"
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      IDENTIFIER
        IDENT "foo"
  WHITESPACE " "
  MATCH_CLAUSE
    L_PAREN "("
    IDENT_PAT
      IDENTIFIER
        IDENT "A"
    WHITESPACE " "
    IDENT_EXPR
      IDENTIFIER
        IDENT "B"
    R_PAREN ")"
  WHITESPACE " "
  MATCH_CLAUSE
    L_PAREN "("
    IDENT_PAT
      IDENTIFIER
        IDENT "C"
    WHITESPACE " "
    IDENT_EXPR
      IDENTIFIER
        IDENT "D"
    R_PAREN ")"
  R_PAREN ")"
  WHITESPACE "\n"

