crates/parser/src/snapshots/parser__tests__parse_inline_ok@0155_prefix_let_expr.ath.snap
---
source: crates/parser/src/tests.rs
description: "(let ((foo 1) (bar 2)) foo)\n"
input_file: crates/parser/test_data/parser/inline/ok/expr/0155_prefix_let_expr.ath
---
PREFIX_LET_EXPR
  L_PAREN "("
  LET_KW "let"
  WHITESPACE " "
  L_PAREN "("
  PREFIX_BINDING
    L_PAREN "("
    IDENT_PAT
      NAME
        IDENT "foo"
    WHITESPACE " "
    EXPR_PHRASE
      IDENT_EXPR
        NAME_REF
          IDENT "1"
    R_PAREN ")"
  WHITESPACE " "
  PREFIX_BINDING
    L_PAREN "("
    IDENT_PAT
      NAME
        IDENT "bar"
    WHITESPACE " "
    EXPR_PHRASE
      IDENT_EXPR
        NAME_REF
          IDENT "2"
    R_PAREN ")"
  R_PAREN ")"
  WHITESPACE " "
  IDENT_EXPR
    NAME_REF
      IDENT "foo"
  R_PAREN ")"
  WHITESPACE "\n"

