crates/parser/src/snapshots/parser__tests__parse_inline_ok@0156_prefix_match_ded.ath.snap
---
source: crates/parser/src/tests.rs
description: "(dmatch foo (A (!claim B)) (C (!claim D)))\n"
input_file: crates/parser/test_data/parser/inline/ok/ded/0156_prefix_match_ded.ath
---
PREFIX_MATCH_DED
  L_PAREN "("
  DMATCH_KW "dmatch"
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      IDENTIFIER
        IDENT "foo"
  WHITESPACE " "
  MATCH_DED_CLAUSE
    L_PAREN "("
    IDENT_PAT
      IDENTIFIER
        IDENT "A"
    WHITESPACE " "
    BANG_METHOD_CALL_DED
      L_PAREN "("
      BANG "!"
      IDENT_EXPR
        IDENTIFIER
          IDENT "claim"
      WHITESPACE " "
      EXPR_PHRASE
        IDENT_EXPR
          IDENTIFIER
            IDENT "B"
      R_PAREN ")"
    R_PAREN ")"
  WHITESPACE " "
  MATCH_DED_CLAUSE
    L_PAREN "("
    IDENT_PAT
      IDENTIFIER
        IDENT "C"
    WHITESPACE " "
    BANG_METHOD_CALL_DED
      L_PAREN "("
      BANG "!"
      IDENT_EXPR
        IDENTIFIER
          IDENT "claim"
      WHITESPACE " "
      EXPR_PHRASE
        IDENT_EXPR
          IDENTIFIER
            IDENT "D"
      R_PAREN ")"
    R_PAREN ")"
  R_PAREN ")"
  WHITESPACE "\n"

