crates/parser/src/snapshots/parser__tests__parse_inline_ok@0156_split_three_pat.ath.snap
---
source: crates/parser/src/tests.rs
description: "(split pat pat pat)\n"
input_file: crates/parser/test_data/parser/inline/ok/pat/0156_split_three_pat.ath
---
SPLIT_PAT
  L_PAREN "("
  SPLIT_KW "split"
  WHITESPACE " "
  IDENT_PAT
    IDENTIFIER
      IDENT "pat"
  WHITESPACE " "
  IDENT_PAT
    IDENTIFIER
      IDENT "pat"
  WHITESPACE " "
  IDENT_PAT
    IDENTIFIER
      IDENT "pat"
  R_PAREN ")"
  WHITESPACE "\n"

